# cosmic-junkyard

./: .gitattributes  Cargo.toml  README.md  architecture.excalidraw  dummy.sh  mod.txt
.github/workflows/: ci.yml  rust.yml
assets/fonts/: FiraMono-LICENSE.txt
assets/models/characters/: Astronaut_BarbaraTheBee.gltf  Astronaut_FernandoTheFlamingo.gltf  Astronaut_FinnTheFrog.gltf  Astronaut_RaeTheRedPanda.gltf  Enemy_ExtraSmall.gltf  Enemy_Flying.gltf  Enemy_Large.gltf  Enemy_Small.gltf  Mech_BarbaraTheBee.gltf  Mech_FernandoTheFlamingo.gltf  Mech_FinnTheFrog.gltf  Mech_RaeTheRedPanda.gltf
assets/models/environment/: Base_Large.gltf  Building_L.gltf  Bush_1.gltf  Bush_2.gltf  Bush_3.gltf  Connector.gltf  GeodesicDome.gltf  Grass_1.gltf  Grass_2.gltf  Grass_3.gltf  House_Cylinder.gltf  House_Long.gltf  House_Open.gltf  House_OpenBack.gltf  House_Single.gltf  House_Single_Support.gltf  MetalSupport.gltf  Planet_1.gltf  Planet_10.gltf  Planet_11.gltf  Planet_2.gltf  Planet_3.gltf  Planet_4.gltf  Planet_5.gltf  Planet_6.gltf  Planet_7.gltf  Planet_8.gltf  Planet_9.gltf  Plant_1.gltf  Plant_2.gltf  Plant_3.gltf  Ramp.gltf  Rock_1.gltf  Rock_2.gltf  Rock_3.gltf  Rock_4.gltf  Rock_Large_1.gltf  Rock_Large_2.gltf  Rock_Large_3.gltf  Roof_Antenna.gltf  (+26 more)
assets/models/items/: Pickup_Bullets.gltf  Pickup_Crate.gltf  Pickup_Health.gltf  Pickup_Jar.gltf  Pickup_KeyCard.gltf  Pickup_Sphere.gltf  Pickup_Thunder.gltf
assets/models/vehicles/: Rover_1.gltf  Rover_2.gltf  Rover_Round.gltf  Spaceship_BarbaraTheBee.gltf  Spaceship_FernandoTheFlamingo.gltf  Spaceship_FinnTheFrog.gltf  Spaceship_RaeTheRedPanda.gltf
assets/scenes/: scene_one.scn.ron
docs/: architecture.excalidraw  game_design.md
src/: graphics.rs  input.rs  level_selection.rs  main.rs  music.rs  saving.rs  sounds.rs  state_machine.rs  utility.rs
src/app/: app_state_machine.rs  game_levels.rs  mod.rs  navigation.rs  player_input.rs  theme.rs
src/app/game/: bounds.rs  game_state_machine.rs  graphics.rs  gravity.rs  input.rs  junk.rs  mod.rs  movement.rs  player.rs  sounds.rs
src/app/level_selection/: mod.rs
src/app/main_menu/: mod.rs
src/app/settings_dialog/: mod.rs
src/assets/: backgrounds.rs  characters.rs  environment.rs  fonts.rs  images.rs  items.rs  mod.rs  music.rs  sounds.rs  ui_sounds.rs  vehicles.rs
src/scenes/: mod.rs  player_input.rs
(+17 files in other folders)
