[package]
name = "cosmic-junkyard"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "jpeg"] }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.16.0" }
rand = "0.8.3"
leafwing-input-manager = "0.9.2"
noisy_bevy = "0.3.0"
strum_macros = "0.24.3"
strum = "0.24.1"
bevy_rapier3d = { version = "0.21.0", features = [
    "simd-stable",
    "debug-render-3d",
] }

[build-dependencies]
embed-resource = "2.1.1"
