[package]
name = "cosmic-junkyard"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.10.1", features = [
    "dynamic_linking",
    "jpeg",
    "mp3",
    "wav",
] }
bevy_asset_loader = { version = "0.16.0" }
rand = "0.8.3"
leafwing-input-manager = "0.9.2"
noisy_bevy = "0.3.0"
strum_macros = "0.25.0"
strum = "0.25.0"
bevy_xpbd_3d = "0.1.0"

[build-dependencies]
embed-resource = "2.1.1"
