[package]
name = "cosmic-junkyard"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.11.0", features = [
    "dynamic_linking",
    "jpeg",
    "mp3",
    "wav",
] }
# bevy_asset_loader = { version = "0.17.0" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git" }
rand = "0.8.3"
leafwing-input-manager = "0.10.0"
strum_macros = "0.25.0"
strum = "0.25.0"
bevy_xpbd_3d = { version = "0.2.0", features = ["debug-plugin"] }
bevy-trait-query = "0.3.0"

[build-dependencies]
embed-resource = "2.1.1"
